- Fixed double Init() call in wxTopLevelWindow causing a memory leak on
  SmartPhone.
- Fixed rendering of borders for wxTextCtrl with wxTE_RICH(2) style when
  using Windows XP's Classic UI theme.
- Text controls with wxTE_RICH style now also generate wxClipboardTextEvents.
- Fixed wxSpinCtrl::GetClientSize() to return sensible value and not just
  spin button's client size.

wxGTK:

- Return false from wxEventLoop::Dispatch() if gtk_main_quit() was called and
  so the loop should exit (Rodolfo Schulz de Lima).
- Implement wxListBox::EnsureVisible() (Andreas Kling)
- Fixed wxCURSOR_HAND to map to GDK_HAND2 and not GDK_HAND1, for consistency
  with other applications.
- Fix wxNotebook::GetPage{Text,Image}() when they were called from the page
  change event handler for the first added page (Mikkel S).
- Fixed wxBitmapButton to use focus and hover bitmaps correctly.
- Fixed race condition which could cause idle processing to stop without
  processing all pending events.
- wxAcceleratorTable now works with buttons too.

wxMac:

- Fixed cursor for wxBusyCursor and wxContextHelp.
- Fixed wxListCtrl to respect items' non-default fonts.


2.8.7
-----

All:

- Fixed bug with default proxy destruction in wxURL (Axel Gembe).

All (GUI):

- wxGraphicsContext implementations now all have the pixel's center at (0.5,0.5),
  avoiding differences in anti-aliasing between platforms.
- wxChoicebook now vertically centres a left-aligned controller.
- Improved borders and size of rich text dialogs.
- Added an optimization to UI updates on idle, by only updating when the
  window is shown.
- Multiple centre panes in wxAUI can now be resized.
- Add support for reading alpha data from TIFF images.

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).
- Fixed a bug whereby acclerators including Enter were not processed
  when a tree control was focused.
- Fixed AUI hint drawing bug on Vista.